# FRAUD-DETECTION

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
notebooks/: 01-EDA.ipynb  02-preprocessing.ipynb  03-modeling.ipynb  04-evaluation.ipynb
src/: config.yaml  pipelines.py  predict.py  preprocessing.py  readData.py  utils.py
test/: test_read_data.py
