[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "imbalanced-learn>=0.14.1",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "prometheus-client>=0.24.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q"
